# IAISponsorship

./: CMakeLists.txt  README.md  SponsorshipConfig.cmake.in
admin/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  adminwindow.ui  main.cpp  studenteditdialog.cpp  studenteditdialog.h  studenteditdialog.ui
cmake/: FindCommander.cmake  FindQt5.cmake  SponsorshipHelpers.cmake
data/: CMakeLists.txt  database.db
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  translations.cmake
src/kernel/: CMakeLists.txt  config.h  config.h.in  debug.cpp  debug.h  global.h
test/: CMakeLists.txt  main.cpp
